tests/characterization/snapshots/backend_env__missing_install_root.snap
---
source: tests/characterization/backend.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: invalid .metadata: missing install_root.
--- end ---
