tests/characterization/snapshots/backend_env__no_metadata.snap
---
source: tests/characterization/backend.rs
expression: output
---
exit: 1
--- stdout ---
--- stderr ---
Error: .metadata not found.
This directory is not an OQTOPUS backend environment.
--- end ---
